# platform.prebuilts.r8

./: Android.bp  BUILD  BUILD.bazel  LICENSE  OWNERS  compatdx-master.jar.map  extractmarker.sh  r8.spdx.json  retrace-r8.sh
src/com/android/tools/r8wrappers/: D8Wrapper.java  R8Wrapper.java
src/com/android/tools/r8wrappers/retrace/: RetraceWrapper.java
src/com/android/tools/r8wrappers/utils/: DepsFileWriter.java  WrapperDiagnosticsHandler.java  WrapperFlag.java
tests/: Android.bp
tests/samples/HelloActivityWithR8/: Android.bp
tests/src/com/android/tools/r8/: CreateStacktraceFromDexDumpTool.java
