load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "r8_binary",
    main_class = "com.android.tools.r8wrappers.R8Wrapper",
    target_compatible_with = ["//build/bazel_common_rules/platforms/os:linux"],
    visibility = ["//visibility:public"],
    runtime_deps = [":r8lib"],
)
